mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_missing_var_assign.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_missing_var_assign.mux`
error: Expected expression, found end of input
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_missing_var_assign.mux:2:7
   |
 2 | int x =
   |       ^
